# reed-solomon-erasure

./: .gitignore  .typos.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README_CN.md  appveyor.yml  bench_clean_compare.sh  build.rs
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  security-hardening-regression.yml
benches/: bandwidth.rs  galois_backend.rs  throughput_matrix.rs
benches/common/: mod.rs
benchmarks/aarch64-darwin/: 2026-06-17-aarch64-darwin-extended-hwinfo.txt  2026-06-17-aarch64-darwin-extended-large-isolated.csv  2026-06-17-aarch64-darwin-extended-large-isolated.json  2026-06-17-aarch64-darwin-extended.csv  2026-06-17-aarch64-darwin-extended.json
benchmarks/small-file/: 2026-05-27-aarch64-apple-silicon-extended.csv  2026-05-27-aarch64-apple-silicon-extended.json  2026-05-27-x86_64-linux-extended.csv  2026-05-27-x86_64-linux-extended.json  2026-06-16-x86_64-linux-10x4_64k-rerun-rust-avx2.csv  2026-06-16-x86_64-linux-10x4_64k-rerun.csv  2026-06-16-x86_64-linux-extended.csv  2026-06-16-x86_64-linux-extended.json  2026-06-17-x86_64-linux-extended-v2.csv  2026-06-17-x86_64-linux-extended-v2.json  2026-06-17-x86_64-linux-extended.csv  2026-06-17-x86_64-linux-extended.json  2026-06-17-x86_64-linux-large-file-isolated.csv  2026-06-17-x86_64-linux-large-file-isolated.json
benchmarks/stream-path/2026-06-28-cooldown/: README.md  phase0-51e0b64-fast.csv  phase4-baseline-f1ad373-extended-auto.csv  phase4-baseline-f1ad373-fast-auto-selected-iter10.csv  phase4-baseline-f1ad373-fast-serial-4x2_64k-iter20.csv  phase4-current-2a1aa88-extended-auto.csv  phase4-current-2a1aa88-fast-auto-selected-iter10.csv  phase4-current-2a1aa88-fast-serial-4x2_64k-iter20.csv
benchmarks/x86_64-simd/: 2026-05-25-amd-epyc-9v45.json  2026-05-26-amd-epyc-9v45-96-core-processor.json  2026-05-26-amd-epyc-9v45-96-core-processor.run-meta.json  2026-05-26-amd-epyc-9v45.json  2026-05-26-amd-epyc-9v45.run-meta.json  2026-05-27-amd-epyc-9v45-96-core-processor.json  2026-05-30-small-file-gfni-auto.json  2026-05-30-smoke-gfni-auto.json  2026-06-16-amd-epyc-9v45-96-core-processor.json  2026-06-16-amd-epyc-9v45-96-core-processor.run-meta.json  COLLECTION.md  README.md  comprehensive-x86_64-benchmark.json
docs/: README-performance-index.md  README.md  aarch64-code-review-2026-05-26.md  aarch64-simd-design.md  aarch64-simd-release-checklist.md  aarch64-source-code-analysis.md  avx2-ssse3-unroll-analysis-2026-06-04.md  benchmark-methodology.md  benchmark-report-2026-06-17-aarch64.md  benchmark-report-2026-06-17-postfix.md  benchmark-results-2026-06-04.md  benchmark-runbook-cross-platform-en.md  benchmark-runbook-cross-platform.md  benchmarks-cross-platform.md  benchmarks-gfni-results.md  code-review-optimization-plan-2026-06-04.md  ec-aarch64-neon-c1-xor-optimization-2026-06-14.md  ec-aarch64-release-check-round2-2026-06-14.md  ec-aarch64-validation-conclusion-data-2026-06-14.md  ec-aarch64-validation-review-2026-06-14.md  ec-decode-idx-benchmark-results-2026-05-28.md  ec-formal-delivery-summary-2026-05-28.md  ec-implementation-playbook.md  ec-improvement-master-plan.md  ec-improvement-task-board.md  ec-klauspost-alignment-design.md  ec-klauspost-alignment-index.md  ec-klauspost-alignment-task-board.md  ec-klauspost-feature-comparison.md  ec-leopard-setup-benchmark-results-2026-05-28.md  ec-minio-compatibility-checklist.md  ec-phase-1-2-first-implementation-checklist.md  ec-phase-1-baseline-and-regression.md  ec-phase-2-api-and-config.md  ec-phase-3-parallel-boundary-design.md  ec-phase-3-parallel-scheduler.md  ec-phase-4-simd-runtime-dispatch.md  ec-phase-5-reconstruction-and-cache.md  ec-phase-6-selftest-release-governance.md  ec-phase-summary-2026-05-28.md  (+115 more)
fuzz/: Cargo.toml  README.md  crash-f620377ed9c81e34bc8393f75940861f9c0d286f
fuzz/fuzz_targets/: fuzz_encode_reconstruct.rs  fuzz_encode_verify.rs
sage/: README.md  README_CN.md
scripts/: README.md  archive_x86_simd_machine.sh  check_backend_consistency.sh  check_benchmark_regression.py  check_reconstruction_hotspot_gate.py  collect_x86_simd_benchmarks.sh  gen_report.py  release-check.sh  render_x86_simd_benchmark_summary.py  render_x86_simd_benchmark_summary.sh  render_x86_simd_ledger_entry.py  render_x86_simd_ledger_entry.sh  run-full-benchmark.sh  run_aarch64_backend_smoke_matrix.sh  run_small_file_benchmark_matrix.sh  run_x86_backend_smoke_matrix.sh  serial-test-check.sh  summarize_x86_simd_benchmarks.py  verify-x86_64.sh
src/: core.rs  errors.rs  galois_16.rs  galois_8.rs  lib.rs  macros.rs  matrix.rs
src/core/: cache_detect.rs  codec.rs  encode.rs  leopard.rs  leopard_gf8.rs  metrics.rs  mod.rs  options.rs  parallel.rs  reconstruct.rs  shard_by_shard.rs  stream.rs  verify.rs  workspace.rs
src/core/leopard_gf16/: decode.rs  driver.rs  encode.rs  fwht_simd.rs  mod.rs  mul_simd.rs  ops.rs  tables.rs  tests.rs  work.rs
src/core/leopard_gf8/: decode.rs  driver.rs  encode.rs  mod.rs  ops.rs  tables.rs  tests.rs  work.rs
src/galois_8/: aligned.rs  backend.rs  mod.rs  policy.rs  profile.rs  scalar.rs  tests.rs
src/galois_8/aarch64/: codegen.rs  mod.rs  neon.rs  sve.rs
src/galois_8/legacy/: mod.rs  simd_c.rs
src/galois_8/ppc64/: mod.rs  vsx.rs
src/galois_8/x86/: avx2.rs  avx512.rs  codegen.rs  gfni.rs  mod.rs  ssse3.rs
src/tests/: galois_16.rs  mod.rs
tests/: benchmark_small_files.rs  benchmark_smoke.rs  benchmark_stream_paths.rs  comprehensive_x86_64_benchmark.rs  golden_vectors.rs  selftest.rs
tests/common/: mod.rs
wasm/: Cargo.toml  README.md
wasm/src/: index.ts  lib.rs
