[package]
name = "reed-solomon-erasure"
version = "6.0.0"
authors = ["Darren Ldl <darrenldldev@gmail.com>"]
edition = "2024"
build = "build.rs"
exclude = [
    "appveyor.yml",
    ".travis.yml"
]
rust-version = "1.95"

description = "Rust implementation of Reed-Solomon erasure coding"

documentation = "https://docs.rs/reed-solomon-erasure"
homepage = "https://github.com/darrenldl/reed-solomon-erasure"
repository = "https://github.com/darrenldl/reed-solomon-erasure"

readme = "README.md"

keywords = ["reed-solomon", "erasure"]

categories = ["encoding"]

license = "MIT"

[features]
default = ["std"] # simd off by default
std = ["parking_lot", "rayon"]
simd-accel = ["cc", "libc"]

[badges]
travis-ci = { repository = "darrenldl/reed-solomon-erasure" }
appveyor = { repository = "darrenldl/reed-solomon-erasure" }
codecov = { repository = "darrenldl/reed-solomon-erasure" }
coveralls = { repository = "darrenldl/reed-solomon-erasure" }

[dependencies]
libc = { version = "0.2", optional = true }
# `log2()` impl for `no_std`
libm = "0.2.16"
hashlink = { version = "0.11", default-features = false }
# Efficient `Mutex` implementation for `std` environment
parking_lot = { version = "0.12.5", optional = true }
rayon = { version = "1.12", optional = true }
smallvec = "1.15"
# `Mutex` implementation for `no_std` environment with the same high-level API as `parking_lot`
spin = { version = "0.12.0", default-features = false, features = ["once", "spin_mutex"] }

[dev-dependencies]
rand = { version = "0.10.1" }
quickcheck = "1.1.0"

# Scientific benchmarking
criterion = { version = "0.8.2", features = ["html_reports"] }

[build-dependencies]
cc = { version = "1.2", optional = true }

[[bench]]
name = "bandwidth"
harness = false

[[bench]]
name = "throughput_matrix"
harness = false

[[bench]]
name = "galois_backend"
harness = false
