[workspace]
members = [".", "wasm", "fuzz"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/darrenldl/reed-solomon-erasure"

[workspace.dependencies]
cc = "1.2"
criterion = { version = "0.8.2", features = ["html_reports"] }
hashlink = { version = "0.11", default-features = false }
libc = "0.2"
libfuzzer-sys = "0.4"
libm = "0.2.16"
parking_lot = "0.12.5"
quickcheck = "1.1.0"
rand = "0.10.1"
rayon = "1.12"
reed-solomon-erasure = { version = "6.0.0", path = "." }
smallvec = "1.15"
spin = { version = "0.12.0", default-features = false, features = ["once", "spin_mutex"] }
wasm-bindgen = "0.2.122"
wee_alloc = "0.4"


[package]
name = "reed-solomon-erasure"
version = "6.0.0"
authors = ["Darren Ldl <darrenldldev@gmail.com>"]
edition.workspace = true
build = "build.rs"
exclude = [
    "appveyor.yml",
    ".travis.yml"
]
rust-version.workspace = true
description = "Rust implementation of Reed-Solomon erasure coding"
documentation = "https://docs.rs/reed-solomon-erasure"
homepage = "https://github.com/darrenldl/reed-solomon-erasure"
repository.workspace = true
readme = "README.md"
keywords = ["reed-solomon", "erasure"]
categories = ["encoding"]
license.workspace = true

[features]
default = ["std"] # simd and metrics off by default
std = ["parking_lot", "rayon"]
# Fine-grained SIMD backends — enable per-architecture as needed.
# Users on aarch64 should enable `simd-neon`; users on x86_64 should enable
# whichever ISA extensions their target supports.
simd-neon = ["cc", "libc"]
simd-ssse3 = ["cc", "libc"]
simd-avx2 = ["cc", "libc"]
simd-avx512 = ["cc", "libc"]
simd-gfni = ["cc", "libc"]
simd-vsx = ["cc", "libc"]
# Backwards-compatible umbrella: enables all SIMD backends.
simd-accel = ["simd-neon", "simd-ssse3", "simd-avx2", "simd-avx512", "simd-gfni", "simd-vsx"]
benchmark-metrics = []

[badges]
travis-ci = { repository = "darrenldl/reed-solomon-erasure" }
appveyor = { repository = "darrenldl/reed-solomon-erasure" }
codecov = { repository = "darrenldl/reed-solomon-erasure" }
coveralls = { repository = "darrenldl/reed-solomon-erasure" }

[dependencies]
libc = { workspace = true, optional = true }
# `log2()` impl for `no_std`
libm.workspace = true
hashlink.workspace = true
# Efficient `Mutex` implementation for `std` environment
parking_lot = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
smallvec.workspace = true
# `Mutex` implementation for `no_std` environment with the same high-level API as `parking_lot`
spin.workspace = true

[dev-dependencies]
rand.workspace = true
quickcheck.workspace = true
# Scientific benchmarking
criterion.workspace = true

[build-dependencies]
cc = { workspace = true, optional = true }

[[bench]]
name = "bandwidth"
harness = false

[[bench]]
name = "throughput_matrix"
harness = false

[[bench]]
name = "galois_backend"
harness = false
