[package]
name = "reed-solomon-erasure-wasm"
version = "0.2.4"
authors = ["Nazar Mokrynskyi <nazar@mokrynskyi.com>", "Darren Ldl <darrenldldev@gmail.com>"]
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
reed-solomon-erasure.workspace = true
wasm-bindgen.workspace = true
wee_alloc.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
default = []
