[package]
name = "rustfs-erasure-codec-wasm"
version = "0.2.5"
authors = ["Nazar Mokrynskyi <nazar@mokrynskyi.com>", "Darren Ldl <darrenldldev@gmail.com>"]
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
rustfs-erasure-codec.workspace = true
wasm-bindgen.workspace = true
wee_alloc.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
default = []
